Adding personal info and contacts

--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>
+        Gilberto Martins CV
+        </title>
+    </head>
     <body>
         <div>
             <h1>
                 Gilberto Manuel Araújo Martins 
             </h1>
+
+            <img src ="profile_image.png">
+
+                <p>
+                    Date of birth : 23/01/1999<br>
+                    Nationality: Portuguese<br>
+                    Gender: Male<br>
+                </p>
+                <p>
+                    Email: gilmartins1999@gmail.com<br>
+                    Phone: (+351) 932277375<br>
+                    Github: https://github.com/Martinez9991
+                </p>
         </div>
-        
         <div>
             <h2>
                 ABOUT ME
@@ -19,7 +38,6 @@
                     way to achieve any goal.
                 </p>
         </div>
-        
         <div>
             <h2>
                 WORK EXPERIENCE
@@ -63,6 +81,5 @@
                         responsibilities, I utilized SQL, Linux CMD, Gitlab, and Markdown.
                     </p>
         </div>
-
     </body>
 </html>
