--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -6,15 +6,29 @@
         <title>
         Gilberto Martins CV
         </title>
+
+        <style>
+            header {
+                color: white;
+                background-color: #000080;
+                padding: 25px;
+                text-align: center;
+            }
+
+            body{
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
+
+
     </head>
     <body>
-        <div>
+        <header>
+            <img src ="profile_image.png">
             <h1>
                 Gilberto Manuel Araújo Martins 
             </h1>
-
-            <img src ="profile_image.png">
-
                 <p>
                     Date of birth : 23/01/1999<br>
                     Nationality: Portuguese<br>
@@ -25,7 +39,7 @@
                     Phone: (+351) 932277375<br>
                     Github: https://github.com/Martinez9991
                 </p>
-        </div>
+        </header>
         <div>
             <h2>
                 ABOUT ME
