Added links for email and github. Added border to profile image and change the shape of the mentionated image

--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -11,21 +11,30 @@
             header {
                 color: white;
                 background-color: #000080;
-                padding: 25px;
+                padding: 6%;
+            }
+
+            body {
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
                 text-align: center;
             }
 
-            body{
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
+            a { 
+                color: white;
             }
+
+            img {
+                border-radius: 50%;
+            }
+
         </style>
 
 
     </head>
     <body>
         <header>
-            <img src ="profile_image.png">
+            <img src ="profile_image.png" alt="Avatar">
             <h1>
                 Gilberto Manuel Araújo Martins 
             </h1>
@@ -35,9 +44,12 @@
                     Gender: Male<br>
                 </p>
                 <p>
-                    Email: gilmartins1999@gmail.com<br>
+                    Email: 
+                    <a href ="mailto:gilmartins1999@gmail.com?subject = Feedback&body = Message">gilmartins1999@gmail.com</a><br>
                     Phone: (+351) 932277375<br>
-                    Github: https://github.com/Martinez9991
+                    Github: 
+                    <a href ="https://github.com/Martinez9991">https://github.com/Martinez9991</a>
+                    
                 </p>
         </header>
         <div>
