Made some adjustments to info and added new sections to the cv. Added rounded boxes to each section

--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -12,6 +12,7 @@
                 color: white;
                 background-color: #000080;
                 padding: 6%;
+                text-align: init;
             }
 
             body {
@@ -26,6 +27,14 @@
 
             img {
                 border-radius: 50%;
+                border: white 7px solid;
+            }
+
+            div {
+                margin: 20px;
+                padding: 20px;
+                border-radius: 25px;
+                border: black 3px solid;
             }
 
         </style>
@@ -58,9 +67,9 @@
             </h2>
                 <p>
                     Bachelor graduate from Instituto Politécnico do Cávado e Ave in Medical IT
-                    Engineering looking for ways to expand my knowledge in my field of study.<br>
+                    Engineering looking for ways to expand my knowledge in my field of study.
                     I'm an outgoing individual who enjoys group projects and employs soft
-                    skills such as communication which is always key. Being organized, optimistic<br>and using proper time management in my opinion is the best
+                    skills such as communication which is always key. Being organized, optimistic and using proper time management in my opinion is the best
                     way to achieve any goal.
                 </p>
         </div>
@@ -74,12 +83,12 @@
                     <p>
                         Worked on a group project named Arroz Seco where the aim was to
                         develop a mobile application and website which provides delivery and
-                        take-away services.<br> One of my responsibilities was to develop
+                        take-away services.One of my responsibilities was to develop
                         diagrams through the usage of Visual Paradigm to represent key
-                        features of the system which were currently being implemented.<br>I was
+                        features of the system which were currently being implemented.I was
                         also entrusted the task of performing regular manual and automated
                         tests through the use of well known Java frameworks such as Selenium
-                        and Maven<br> to ensure the quality of the product matched what was
+                        and Maven to ensure the quality of the product matched what was
                         requested from the client.
                     </p>
                 <h3>
@@ -88,8 +97,8 @@
                     <p>
                         I contributed to the IT department with a focus on supporting the
                         development and maintenance of applications. My primary
-                        responsibility involved<br> spearheading the creation of a new desktop
-                        application aimed at enhancing the management of cylinders.<br>
+                        responsibility involved spearheading the creation of a new desktop
+                        application aimed at enhancing the management of cylinders.
                         For this project, I employed the tools of Visual .NET, ASP.NET, and SQL
                     </p>
                 <h3>
@@ -97,15 +106,40 @@
                 </h3>
                     <p>
                         I worked in the support department of the company, where my
-                        primary role involved delivering comprehensive assistance to clients in<br>
+                        primary role involved delivering comprehensive assistance to clients in
                         navigating the intricacies of software and hardware integration within
                         the ESR system. The ESR, a powerful retail business Point of Sale (POS)
-                        management software.<br>
+                        management software.
                         In addition to providing hands-on support, I played a pivotal role in
-                        conducting manual testing and analyzing client requirements to<br>
+                        conducting manual testing and analyzing client requirements to
                         enhance the functionality and efficiency of the software. To fulfill these
                         responsibilities, I utilized SQL, Linux CMD, Gitlab, and Markdown.
                     </p>
+        </div>
+        <div>
+            <h3>
+                Digital Skills
+            </h3>
+                <p>
+                    C# C SQL Microsoft Office Python Low code Platform (Mendix) Linux Software testing using
+                    Selenium Automation Visual Studio - Visual basic Markdown
+                </p>
+        </div>
+        <div>
+            <h3>
+                Languague Skills
+            </h3>
+                <p>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                </p>
+        </div>
+        <div>
+            <h3>
+                Education and Training
+            </h3>
+                <p>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                </p>
         </div>
     </body>
 </html>
