Added some info

--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -21,10 +21,6 @@
                 text-align: center;
             }
 
-            a { 
-                color: white;
-            }
-
             img {
                 border-radius: 50%;
                 border: white 7px solid;
@@ -35,6 +31,14 @@
                 padding: 20px;
                 border-radius: 25px;
                 border: black 3px solid;
+            }
+
+            table {
+                border: black 2px solid;
+            }
+
+            .link-header {
+                color: white;
             }
 
         </style>
@@ -54,10 +58,10 @@
                 </p>
                 <p>
                     Email: 
-                    <a href ="mailto:gilmartins1999@gmail.com?subject = Feedback&body = Message">gilmartins1999@gmail.com</a><br>
+                    <a class="link-header" href ="mailto:gilmartins1999@gmail.com?subject = Feedback&body = Message">gilmartins1999@gmail.com</a><br>
                     Phone: (+351) 932277375<br>
                     Github: 
-                    <a href ="https://github.com/Martinez9991">https://github.com/Martinez9991</a>
+                    <a class="link-header" href ="https://github.com/Martinez9991">https://github.com/Martinez9991</a>
                     
                 </p>
         </header>
@@ -127,19 +131,53 @@
         </div>
         <div>
             <h3>
-                Languague Skills
+                Language Skills
             </h3>
                 <p>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+                    English
                 </p>
+                <table style="width:100%;">
+                    <tr>
+                        <th>Listening:</th>
+                        <td>C2</td>
+                    </tr>
+                    <tr>
+                        <th>Reading:</th>
+                        <td>C2</td>
+                    </tr>
+                    <tr>
+                        <th>Writing:</th>
+                        <td>B2</td>
+                    </tr>
+                </table>
+                <p>
+                    Spanish
+                </p>
+                <table style="width:100%;">
+                    <tr>
+                        <th>Listening:</th>
+                        <td>A2</td>
+                    </tr>
+                    <tr>
+                        <th>Reading:</th>
+                        <td>A2</td>
+                    </tr>
+                    <tr>
+                        <th>Writing:</th>
+                        <td>A2</td>
+                    </tr>
+                </table>
+
         </div>
         <div>
             <h3>
                 Education and Training
             </h3>
                 <p>
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
-                </p>
+                    Bachelor Degree: Medical IT Engineering<br>
+                    Collage:    
+                    <a href="https://ipca.pt/">Instituto Politécnico do Cávado e do Ave</a>   
+                </p>     
         </div>
     </body>
 </html>
