Remade the table and centered it;Added info regarding the language levels

--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -34,11 +34,21 @@
             }
 
             table {
+                border-collapse: collapse;
+                width: 75%;
+                padding: 10px;
+            }
+
+            table,tr,th {
                 border: black 2px solid;
             }
 
             .link-header {
                 color: white;
+            }
+
+            .detail-text {
+                color: gray;
             }
 
         </style>
@@ -49,7 +59,7 @@
         <header>
             <img src ="profile_image.png" alt="Avatar">
             <h1>
-                Gilberto Manuel Araújo Martins 
+                Gilberto Martins 
             </h1>
                 <p>
                     Date of birth : 23/01/1999<br>
@@ -136,7 +146,7 @@
                 <p>
                     English
                 </p>
-                <table style="width:100%;">
+                <table>
                     <tr>
                         <th>Listening:</th>
                         <td>C2</td>
@@ -153,7 +163,7 @@
                 <p>
                     Spanish
                 </p>
-                <table style="width:100%;">
+                <table>
                     <tr>
                         <th>Listening:</th>
                         <td>A2</td>
@@ -167,7 +177,7 @@
                         <td>A2</td>
                     </tr>
                 </table>
-
+                <p class="detail-text">Levels: A1 and A2: Basic user; B1 and B2: Independent user; C1 and C2: Proficient user</p>
         </div>
         <div>
             <h3>
@@ -176,7 +186,8 @@
                 <p>
                     Bachelor Degree: Medical IT Engineering<br>
                     Collage:    
-                    <a href="https://ipca.pt/">Instituto Politécnico do Cávado e do Ave</a>   
+                    <a href="https://ipca.pt/">Instituto Politécnico do Cávado e do Ave</a><br>
+                    2018-2021   
                 </p>     
         </div>
     </body>
