--- a/CV_main_page.html
+++ b/CV_main_page.html
@@ -6,54 +6,7 @@
         <title>
         Gilberto Martins CV
         </title>
-
-        <style>
-            header {
-                color: white;
-                background-color: #000080;
-                padding: 6%;
-                text-align: init;
-            }
-
-            body {
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
-                text-align: center;
-            }
-
-            img {
-                border-radius: 50%;
-                border: white 7px solid;
-            }
-
-            div {
-                margin: 20px;
-                padding: 20px;
-                border-radius: 25px;
-                border: black 3px solid;
-            }
-
-            table {
-                border-collapse: collapse;
-                width: 75%;
-                padding: 10px;
-            }
-
-            table,tr,th {
-                border: black 2px solid;
-            }
-
-            .link-header {
-                color: white;
-            }
-
-            .detail-text {
-                color: gray;
-            }
-
-        </style>
-
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
