Added src folder

--- a/src/CV_main_page.html
+++ b/src/CV_main_page.html
@@ -24,8 +24,7 @@
                     <a class="link-header" href ="mailto:gilmartins1999@gmail.com?subject = Feedback&body = Message">gilmartins1999@gmail.com</a><br>
                     Phone: (+351) 932277375<br>
                     Github: 
-                    <a class="link-header" href ="https://github.com/Martinez9991">https://github.com/Martinez9991</a>
-                    
+                    <a class="link-header" href ="https://github.com/Martinez9991">https://github.com/Martinez9991</a><br>
                 </p>
         </header>
         <div>
