Added pages folder;Corrected a bug of the profile image not appearing when running the live server

--- a/src/pages/CV_main_page.html
+++ b/src/pages/CV_main_page.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src ="/CV/image/profile_image.png" alt="Avatar">
+            <img src ="/image/profile_image.png" alt="Avatar"/>
             <h1>
                 Gilberto Martins 
             </h1>
